# storm

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-tests.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml
benchmark/: router.py
samples/basic-app/: main.py
samples/basic-app_ii/: main.py
samples/basic-app_iii/: main.py
samples/basic-jax-app/: main.py  pyrightconfig.json
samples/basic-numba-app/: main.py  nodemon.json  settings.py
samples/basic-repl-app/: main.py
samples/basic-rx-app/: main.py
samples/basic_app_with_settings/: main.py  settings.py
samples/basic_duck_db_app/: main.py  settings.py
samples/basic_sse_app/: main.py  settings.py  test_sse.html
samples/decorator-app/: main.py
samples/decorator-app_ii/: main.py
samples/decorator_app/: main.py
samples/decorator_app_ii/: main.py
samples/gprefix-app/: main.py
samples/gprefix-app/controllers/: users_controllers.py
samples/gprefix-app/services/: users_service.py
samples/gprefix_app/: main.py  settings.py
samples/gprefix_app/controllers/: users_controllers.py
samples/gprefix_app/services/: users_service.py
samples/hooks-app/: main.py
samples/hooks-app/controllers/: notes_controllers.py  users_controllers.py
samples/hooks-app/modules/: notes_module.py  users_module.py
samples/hooks-app/services/: users_notes_service.py  users_service.py
samples/hooks_app/modules/: app_module.py
samples/hooks_app/services/: users_service.py
samples/hooks_pp/: main.py
samples/hooks_pp/controllers/: notes_controllers.py  users_controllers.py
samples/hooks_pp/modules/: users_module.py
samples/hooks_pp/services/: users_notes_service.py
samples/interceptor-app/: main.py
samples/interceptor-app/modules/: app_module.py  users_module.py
samples/interceptor-app/services/: users_service.py
samples/interceptor_app/: main.py
samples/interceptor_app/services/: users_service.py  (+1 more)
samples/middlewares-app/: main.py
samples/pipes-app/: main.py
samples/repl/: main.py
samples/versionning-app/: main.py  settings.py
samples/versionning_app/: banner.txt  main.py
storm/common/: __init__.py  constants.py  execution_context.py
storm/core/: __init__.py  application.py  appliction_config.py  container.py  context.py  controller.py  global_interceptor.py  global_middleware.py  interceptor_pipeline.py  metadata_scanner.py  middleware_pipeline.py  module.py  reflector.py  settings.py
tests/: test_advanced_guards.py  test_advanced_interceptors.py  test_advanced_pipes.py  test_application.py  test_core.py  test_decorators.py  test_di.py  test_exception_filter.py  test_exceptions.py  test_global_interceptors.py  test_global_middleware.py  test_guards.py  test_interceptors.py  test_lifecycle_hooks.py  test_logger.py  test_metadata.py  test_middleware.py  test_modules.py  test_pipes.py  test_router.py
(+211 files in other folders)
