[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "storm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Your Name", email = "your_email@example.com" },
    {name = "Adib Grouz", email = "contact@adib-grouz.com"},
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.13"
dependencies = [
    # Add your runtime dependencies here, e.g., "requests>=2.0.0"
]

[tool.pdm]
version = { source = "file", path = "storm/__init__.py" }
distribution = true